# flask_and_angular_ts_dashboard

./: .gitignore  ANGULAR_EXERCISES.md  ANGULAR_TUTORIAL.md  BACKEND_DEBUG.md  QUICKSTART.md  README.md  TECHNICAL_OVERVIEW.md  TROUBLESHOOTING.md  UNSAFE_PORTS.md  VERSION.md  diagnose.sh  project_structure.txt  setup.sh
backend/: app.py  debug_backend.sh  pyproject.toml  requirements.txt  test_api.py  test_minimal.py  test_websocket.py
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.ts  app.module.ts
frontend/src/app/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
frontend/src/app/services/: titanic.service.ts
